# state_space_practice

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SCRATCHPAD.md  TASKS.md  environment.yml  environment_gpu.yml  pyproject.toml
docs/: hamiltonian_architecture.md  real_ca1_theta_analysis_plan.md  switching_spike_oscillator_plan.md
docs/plans/: 2026-04-03-adaptive-decoder.md  2026-04-03-cross-region-coupling.md  2026-04-03-cross-session-drift-tasks.md  2026-04-03-cross-session-drift.md  2026-04-03-joint-learning-drift.md  2026-04-03-position-decoding-tasks.md  2026-04-03-position-decoding.md  2026-04-04-covariate-driven-drift.md  2026-04-04-execution-roadmap.md  2026-04-04-joint-belief-state-decoder-tasks.md  2026-04-04-joint-belief-state-decoder.md  2026-04-04-multinomial-choice-model.md  2026-04-04-multinomial-choice-tasks.md  2026-04-04-spatial-value-model.md  2026-04-05-bandit-latent-roadmap.md  2026-04-05-ca1-represented-state-switching.md  (+25 more)
notebooks/: 1998_brown_wilson.ipynb  2001_brown_solo.ipynb  2002_frank_brown.ipynb  2003_smith_brown.ipynb  2004_eden_brown.ipynb  2004_eden_brown_spline.py  2004_smith_brown.ipynb  2008_czanner_brown.ipynb  2011_Macke_Sahani.ipynb  2024_Hsin_Stephen-2.ipynb  2024_Hsin_Stephen.ipynb  adaptive_filter_test.ipynb  bfgs_guard_comparison.py  ca1_comprehensive_analysis.py  ca1_evaluation.py  car_track_test.ipynb  contingency_belief_smoke.py  correctness_ca1_progression.py  correctness_oscillation.py  correctness_oscillator_models.py  correctness_verification.py  cross_collapse.ipynb  debug_pp_em.py  debug_pp_em2.py  debug_pp_em3.py  diagnose_smoother_nan.py  dim_pp_ca1_exploration.py  eden_2004.ipynb  hmm_opt.ipynb  kalman_test.ipynb  place_field_tracking_2d.py  place_field_tracking_real.py  position_kalman_filter.ipynb  real_ca1_data_exploration.ipynb  real_ca1_data_exploration.py  real_ca1_model_fitting.py  real_ca1_phase_locking.ipynb  real_ca1_phase_locking.py  real_ca1_theta_focused.py  real_ca1_theta_segmentation.ipynb  (+12 more)
scripts/: _test_gaussian_boundary.py  debug_position_decoder.py  position_decoding_demo.py
(+108 files in other folders)
