[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "state_space_practice"
description = ""
readme = "README.md"
requires-python = ">=3.8,<3.11"
license = { file = "LICENSE" }
authors = [{ name = "Eric Denovellis", email = "eric.denovellis@ucsf.edu" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "jax",
    "jaxlib",
    "pandas",
    "networkx",
    "xarray",
    "scikit-learn",
    "patsy",
    "tqdm",
    "track_linearization",
    "matplotlib",
    "seaborn",
    "optax",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/edeno/state_space_practice"
"Bug Tracker" = "https://github.com/edeno/state_space_practice/issues"

[project.optional-dependencies]
test = ["black", "pytest", "pytest-cov", "hypothesis"]
gpu = ["jax[cuda]"]
viz = ["sortingview"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/state_space_practice/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/state_space_practice"]

[tool.pytest.ini_options]
testpaths = ["src/state_space_practice/tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/state_space_practice"]
omit = ["*/tests/*", "*/_version.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["state_space_practice"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
